src/main/java/com/example/cinemagicgto/cinemarestful/error/PeliculaNotFoundException.java
package com.example.cinemagicgto.cinemarestful.error;

public class PeliculaNotFoundException extends Exception{
    public PeliculaNotFoundException(String message) {super(message);}

}
